...
                android:textStyle="bold"/>

        </androidx.cardview.widget.CardView>

        <!-- 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cvLecturesListBtn"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="12dp"
...
